--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -3,10 +3,10 @@
     --t007-toast-type-color: whitesmoke;
     --t007-toast-background: rgb(from black r g b/.4);
     --t007-toast-background-blur: 10px;
-    --t007-toast-transition: 200ms;
-    --t007-toast-timing-function: cubic-bezier(0.34, 1.56, 0.64, 1);
-    --t007-toast-margin: 10px;
-    --t007-toast-width: calc(var(--t007-toast-unit) * 20.5);
+    --t007-toast-transition: 250ms;
+    --t007-toast-timing-function: cubic-bezier(0.34, 1.64, 0.64, 1);
+    --t007-toast-margin: 8px;
+    --t007-toast-width: calc(var(--t007-toast-unit) * 20);
     --t007-toast-height: fit-content;
     --t007-toast-max-width: 100%;
     --t007-toast-max-height: calc(var(--t007-toast-unit) * 8.5); 
@@ -16,6 +16,7 @@
     --t007-toast-image-height: calc(var(--t007-toast-unit) * 3.5);
     --t007-toast-image-border-radius: calc(var(--t007-toast-unit)/5);
     --t007-toast-icon-size: calc(var(--t007-toast-unit) * 1.5);
+    --t007-toast-font-family: inherit;
     --t007-toast-font-size: calc(var(--t007-toast-unit)/1.05);
     --t007-toast-max-lines: 7;
     --t007-toast-x-size: calc(var(--t007-toast-unit)*1.75);
@@ -80,17 +81,18 @@
 }
 
 .t007-toast {
+    font-family: var(--t007-toast-font-family);
+    position: relative;
     display: flex;
     align-items: center;
+    gap: calc(var(--t007-toast-unit)/2.5);
     width: var(--t007-toast-width);
     height: var(--t007-toast-height);
     max-width: var(--t007-toast-max-width);
     max-height: var(--t007-toast-max-height);
-    color: rgb(20, 20, 20);
-    gap: calc(var(--t007-toast-unit)/2.5);
     padding: var(--t007-toast-padding);
-    border-radius: var(--t007-toast-border-radius);
     background: var(--t007-toast-background);
+    border-radius: var(--t007-toast-border-radius);
     -webkit-backdrop-filter: blur(var(--t007-toast-background-blur));
     backdrop-filter: blur(var(--t007-toast-background-blur));
     overflow: hidden;
@@ -124,13 +126,13 @@
 }
 
 .t007-toast-container[data-position="top-center"] .t007-toast {
-    --t-from: -110lvh;
-    --t-bounce: 55lvh;
+    --t-from: -100%;
+    --t-bounce: 10%;
 }
 
 .t007-toast-container[data-position="bottom-center"] .t007-toast, .t007-toast-container[data-position="center-center"] .t007-toast {
-    --t-from: 100lvh;
-    --t-bounce: 45lvh;
+    --t-from: 100%;
+    --t-bounce: -10%;
 }
 
 .t007-toast.info {
@@ -252,14 +254,14 @@
 
 .toast-cancel-button {
     display: none;
-    align-items: center;
-    justify-content: center;
+    align-self: start;
     background: none;
     padding: 0;
     border: none;
+    line-height: .65;
     color: var(--t007-toast-x-color);
     font-size: var(--t007-toast-x-size);
-    opacity: .75;
+    opacity: .6;
 }
 
 .toast-cancel-button:hover {
