--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -1,4 +1,5 @@
 :where(:root) {
+    --t007-toast-font-family: inherit;
     --t007-toast-unit: 1rem;
     --t007-toast-type-color: whitesmoke;
     --t007-toast-background: rgb(from black r g b/.4);
@@ -16,7 +17,6 @@
     --t007-toast-image-height: calc(var(--t007-toast-unit) * 3.5);
     --t007-toast-image-border-radius: calc(var(--t007-toast-unit)/5);
     --t007-toast-icon-size: calc(var(--t007-toast-unit) * 1.5);
-    --t007-toast-font-family: inherit;
     --t007-toast-font-size: calc(var(--t007-toast-unit)/1.05);
     --t007-toast-max-lines: 7;
     --t007-toast-x-size: calc(var(--t007-toast-unit)*1.75);
@@ -47,6 +47,14 @@
     from { transform: translateY(var(--t-to)); } 
     50% { transform: translateY(var(--t-bounce)); } 
     to { transform: translateY(var(--t-from)); }
+}
+
+.t007-toast-container,
+.t007-toast-container *,
+.t007-toast-container *::after,
+.t007-toast-container *::before {
+    box-sizing: border-box;
+    font-family: var(--t007-toast-font-family);
 }
 
 .t007-toast-container {
@@ -86,7 +94,6 @@
 }
 
 .t007-toast {
-    font-family: var(--t007-toast-font-family);
     position: relative;
     display: flex;
     align-items: center;
