--- a/T007_input_library/T007_input.css
+++ b/T007_input_library/T007_input.css
@@ -46,6 +46,10 @@
     -webkit-font-smoothing: antialiased;
 }
 
+.field:has(.input[hidden]) {
+  display: none;
+}
+
 .field:where(:hover) {
     --i-current-color: var(--i-hover-color);
 }
