--- a/T007_dialog_library/T007_dialog.css
+++ b/T007_dialog_library/T007_dialog.css
@@ -35,6 +35,10 @@
   --t007-input-base-color: rgb(from var(--t007-dialog-message-color) r g b/0.45);
   --t007-input-hover-color: rgb(from var(--t007-dialog-message-color) r g b/0.95);
   --t007-input-focus-color: var(--t007-dialog-message-color);
+  --t007-input-base-text-color: var(--t007-dialog-message-color);
+  --t007-input-hover-text-color: var(--t007-dialog-message-color);
+  --t007-input-focus-text-color: var(--t007-dialog-message-color);
+  --t007-input-error-text-color: var(--t007-dialog-message-color);
 }
 
 .t007-dialog,
