--- a/T007_input_library/T007_input.css
+++ b/T007_input_library/T007_input.css
@@ -3,7 +3,7 @@
   --t007-input-color: black;
   --t007-input-icon-color: var(--t007-input-color);
   --t007-input-base-color: rgb(from var(--t007-input-color) r g b/0.45);
-  --t007-input-hover-color: rgb(from var(--t007-input-color) r g b/0.65);
+  --t007-input-hover-color: rgb(from var(--t007-input-color) r g b/0.8);
   --t007-input-focus-color: rgb(from var(--t007-input-color) r g b/1);
   --t007-input-success-color: green;
   --t007-input-error-color: #b00020;
@@ -19,25 +19,46 @@
   --t007-input-error-bg-color: transparent;
   --t007-input-autofill-bg-color: transparent;
   --t007-input-font-size: 1rem;
-  --t007-input-floating-label-scale: .75;
-  --t007-input-floating-label-font-size: calc(var(--t007-input-font-size)*var(--t007-input-floating-label-scale));
+  --t007-input-floating-label-scale: 0.75;
+  --t007-input-floating-label-font-size: calc(
+    var(--t007-input-font-size) * var(--t007-input-floating-label-scale)
+  );
+  --t007-input-helper-font-size: 0.75rem;
   --t007-input-height: 3rem;
+  --t007-input-icon-width: unset;
+  --t007-input-icon-height: unset;
   --t007-input-padding: 0.75rem;
   --t007-input-border-radius: 0.25rem;
   --t007-input-border-width: 1px;
   --t007-input-active-border-width: 2px;
+  --t007-input-checkbox-font-size: 0.9rem;
+  --t007-input-checkbox-gap: 0.5rem;
   --t007-input-checkmark-color: white;
+  --t007-input-checkmark-width: 2px;
+  --t007-input-checkbox-size: 0.85rem;
   --t007-input-checkbox-background: whitesmoke;
   --t007-input-checkbox-checked-background: dodgerblue;
+  --t007-input-checkbox-border-width: 1px;
+  --t007-input-checkbox-border-radius: 0.2rem;
   --t007-input-checkbox-border-color: #707070;
   --t007-input-checkbox-checked-border-color: black;
+  --t007-input-radio-gap: 0.5rem;
+  --t007-input-radio-font-size: 0.9rem;
   --t007-input-radio-color: dodgerblue;
+  --t007-input-radio-size: 0.85rem;
   --t007-input-radio-background: whitesmoke;
   --t007-input-radio-checked-background: whitesmoke;
+  --t007-input-radio-border-width: 1px;
   --t007-input-radio-border-color: #707070;
   --t007-input-radio-checked-border-color: dodgerblue;
   --t007-input-ripple-size: 250%;
-  --t007-input-ripple-bg-color: ;
+  --t007-input-ripple-bg-color: rgb(
+    from var(--t007-input-checkbox-checked-background) r g b/0.15
+  );
+  --t007-input-p-meter-font-size: 0.75rem;
+  --t007-input-p-meter-gap: 0.25rem;
+  --t007-input-p-meter-height: 0.25rem;
+  --t007-input-p-meter-borde-radius: unset;
   --t007-input-p-meter-color-weak: #b81a0a;
   --t007-input-p-meter-color-fair: #f68b1e;
   --t007-input-p-meter-color-strong: #0a8b1e;
@@ -51,9 +72,8 @@
   box-sizing: border-box;
   font-family: var(--t007-input-font-family);
   isolation: isolate;
-  transition-property:
-    transform, filter, background-color, color, border, right, left, top,
-    bottom, width, height, font-size;
+  transition-property: transform, filter, background-color, color, border, right,
+    left, top, bottom, width, height, font-size, scale;
   transition-duration: 150ms;
   transition-timing-function: ease;
 }
@@ -68,7 +88,7 @@
   --t007-input-current-bg-color: var(--t007-input-base-bg-color);
   width: 100%;
   max-width: 100%;
-  padding-top: 1rem;
+  padding-top: calc(var(--t007-input-helper-font-size) * 1.3);
   -webkit-font-smoothing: antialiased;
 }
 
@@ -84,19 +104,19 @@
 
 .t007-input-field:where(
     :has(
-      .t007-input:is(
-          [data-filled],
-          :focus,
-          :-webkit-autofill,
-          :not(:placeholder-shown):where(
-              :not(select):not([type="date"]):not([type="time"]):not(
-                  [type="datetime-local"]
-                ):not([type="month"]):not([type="week"]):not(
-                  [type="color"]
-                ):not([type="range"]):not([type="file"])
-            )
-        )
-    )
+        .t007-input:is(
+            [data-filled],
+            :focus,
+            :-webkit-autofill,
+            :not(:placeholder-shown):where(
+                :not(select):not([type="date"]):not([type="time"]):not(
+                    [type="datetime-local"]
+                  ):not([type="month"]):not([type="week"]):not(
+                    [type="color"]
+                  ):not([type="range"]):not([type="file"])
+              )
+          )
+      )
   ) {
   --t007-input-current-color: var(--t007-input-focus-color);
   --t007-input-current-text-color: var(--t007-input-focus-text-color);
@@ -223,31 +243,31 @@
 
 .t007-input-field:not(
     :has(
-      .t007-input:is(
-          [data-filled],
-          :focus,
-          :-webkit-autofill,
-          :not(:placeholder-shown):where(
-              :not(select):not([type="date"]):not([type="time"]):not(
-                  [type="datetime-local"]
-                ):not([type="month"]):not([type="week"]):not(
-                  [type="color"]
-                ):not([type="range"]):not([type="file"])
-            )
-        ),
-      .t007-input:is(
-          select,
-          :not([placeholder=""]),
-          [type="date"],
-          [type="time"],
-          [type="datetime-local"],
-          [type="month"],
-          [type="week"],
-          [type="color"],
-          [type="range"],
-          [type="file"]
-        )
-    )
+        .t007-input:is(
+            [data-filled],
+            :focus,
+            :-webkit-autofill,
+            :not(:placeholder-shown):where(
+                :not(select):not([type="date"]):not([type="time"]):not(
+                    [type="datetime-local"]
+                  ):not([type="month"]):not([type="week"]):not(
+                    [type="color"]
+                  ):not([type="range"]):not([type="file"])
+              )
+          ),
+        .t007-input:is(
+            select,
+            :not([placeholder=""]),
+            [type="date"],
+            [type="time"],
+            [type="datetime-local"],
+            [type="month"],
+            [type="week"],
+            [type="color"],
+            [type="range"],
+            [type="file"]
+          )
+      )
   )
   .t007-input-outline-notch {
   width: auto !important;
@@ -302,8 +322,10 @@
   )
   .t007-input-floating-label {
   transform: translateY(
-      calc(-1 * ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2)))
-    );
+    calc(
+      -1 * ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2))
+    )
+  );
   font-size: var(--t007-input-floating-label-font-size);
   opacity: 1;
   left: 0.25rem;
@@ -342,7 +364,9 @@
   )
   .t007-input-floating-label.t007-input-shake {
   transform: translateY(
-      calc(-1 * ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2)))
+      calc(
+        -1 * ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2))
+      )
     )
     translateX(0.25rem);
 }
@@ -389,16 +413,36 @@
   opacity: 0.55;
 }
 
+.t007-input-field:has(.t007-input[type="file"]) {
+  /* computed values for the selector button */
+  --t007-input-sb-active-margin: calc(
+    (var(--t007-input-floating-label-font-size) * 1.3) / 2
+  );
+  --t007-input-sb-padding-inline: calc(var(--t007-input-font-size) / 3.5);
+  --t007-input-sb-padding-block: calc(
+    (
+        (var(--t007-input-height) / 2) -
+          ((var(--t007-input-font-size) / 1.25) / 2)
+      ) - ((var(--t007-input-floating-label-font-size) * 1.3) / 2) - 1px
+  );
+}
+
+.t007-input-wrapper:has(.t007-input[type="file"]) {
+  padding-block: var(--t007-input-sb-active-margin);
+  padding-left: var(--t007-input-sb-active-margin);
+}
+
 :where(.t007-input[type="file"])::file-selector-button {
   font-family: inherit;
   font-weight: bold;
   font-size: calc(var(--t007-input-font-size) / 1.25);
-  margin-right: 0.65rem;
-  padding: 0.225rem;
+  margin-right: calc(var(--t007-input-font-size) / 2.5);
   border-top: none;
+  padding-inline: var(--t007-input-sb-padding-inline);
+  padding-block: calc(var(--t007-input-sb-padding-block) - 1px);
   border-right: none;
   border-width: 2px;
-  border-radius: 0.18rem;
+  border-radius: calc(var(--t007-input-border-radius) / 1.25);
   background: dodgerblue;
   color: whitesmoke;
   cursor: pointer;
@@ -416,18 +460,13 @@
   filter: brightness(80%);
 }
 
-.t007-input-wrapper:has(.t007-input[type="file"].t007-input-image-selected) {
-  padding-block: 0.5rem;
-  padding-left: 0.5rem;
-}
-
-:where(.t007-input[type="file"].t007-input-image-selected)::file-selector-button {
-  background:
-    center/contain no-repeat var(--t007-input-image-src),
-    linear-gradient(black, black),
-    black;
+:where(
+    .t007-input[type="file"].t007-input-image-selected
+  )::file-selector-button {
+  background: center/contain no-repeat var(--t007-input-image-src),
+    linear-gradient(black, black), black;
   color: transparent;
-  padding: 0.725rem;
+  padding-block: var(--t007-input-sb-padding-block);
   border: none;
 }
 
@@ -456,6 +495,11 @@
   background-color: rgba(0, 0, 0, 0.02);
 }
 
+.t007-input-icon svg {
+  width: var(--t007-input-icon-width);
+  height: var(--t007-input-icon-height);
+}
+
 .t007-input-icon svg path {
   fill: var(--t007-input-icon-color);
 }
@@ -468,7 +512,7 @@
 .t007-input-helper-line {
   position: relative;
   padding-inline: 1rem;
-  height: 1rem;
+  height: calc(var(--t007-input-helper-font-size) * 1.3);
 }
 
 .t007-input-helper-text::before {
@@ -482,10 +526,11 @@
 
 .t007-input-helper-text {
   position: absolute;
-  font-size: 0.75rem;
+  top: -1px;
+  font-size: var(--t007-input-helper-font-size);
   color: var(--t007-input-current-color);
-  line-height: 0.785rem;
   opacity: 0;
+  line-height: 1.3;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   line-clamp: 2;
@@ -498,7 +543,8 @@
   opacity: 1;
 }
 
-.t007-input-helper-line:has(.t007-input-helper-text.t007-input-show) .t007-input-helper-text[data-violation="none"] {
+.t007-input-helper-line:has(.t007-input-helper-text.t007-input-show)
+  .t007-input-helper-text[data-violation="none"] {
   opacity: 0;
 }
 
@@ -528,7 +574,9 @@
 }
 
 .t007-input-password-meter[data-strength-level="4"] {
-  --t007-input-p-meter-current-color: var(--t007-input-p-meter-color-very-strong);
+  --t007-input-p-meter-current-color: var(
+    --t007-input-p-meter-color-very-strong
+  );
 }
 
 .t007-input-password-meter::after {
@@ -537,7 +585,7 @@
   bottom: 0;
   display: block;
   text-align: right;
-  font-size: 0.75rem;
+  font-size: var(--t007-input-p-meter-font-size);
   margin-top: 0.75rem;
   color: var(--t007-input-p-meter-current-color);
   line-height: normal;
@@ -565,23 +613,24 @@
 
 .t007-input-password-strength-meter > div {
   flex: 1;
-  margin-right: 0.25rem;
-  height: 0.225rem;
+  margin-right: var(--t007-input-p-meter-gap);
+  height: var(--t007-input-p-meter-height);
+  border-radius: var(--t007-input-p-meter-border-radius);
 }
 
 .t007-input-password-meter[data-strength-level="1"] .t007-input-p-weak,
-.t007-input-password-meter[data-strength-level="2"] :is(.t007-input-p-weak, .t007-input-p-fair),
-.t007-input-password-meter[data-strength-level="3"] :is(.t007-input-p-weak, .t007-input-p-fair, .t007-input-p-strong),
+.t007-input-password-meter[data-strength-level="2"]
+  :is(.t007-input-p-weak, .t007-input-p-fair),
+.t007-input-password-meter[data-strength-level="3"]
+  :is(.t007-input-p-weak, .t007-input-p-fair, .t007-input-p-strong),
 .t007-input-password-meter[data-strength-level="4"]
-  :is(.t007-input-p-weak, .t007-input-p-fair, .t007-input-p-strong, .t007-input-p-very-strong) {
+  :is(
+    .t007-input-p-weak,
+    .t007-input-p-fair,
+    .t007-input-p-strong,
+    .t007-input-p-very-strong
+  ) {
   background-color: var(--t007-input-p-meter-current-color);
-}
-
-.t007-input-checkbox-group,
-.t007-input-radio-group {
-  display: inline-flex;
-  flex-direction: column;
-  gap: 1rem;
 }
 
 .t007-input-checkbox-wrapper,
@@ -589,8 +638,16 @@
   position: relative;
   display: inline-flex;
   align-items: center;
-  gap: 0.5rem;
-  font-size: 0.9rem;
+}
+
+.t007-input-checkbox-wrapper {
+  gap: var(--t007-input-checkbox-gap);
+  font-size: var(--t007-input-checkbox-font-size);
+}
+
+.t007-input-radio-wrapper {
+  gap: var(--t007-input-radio-gap);
+  font-size: var(--t007-input-radio-font-size);
 }
 
 .t007-input-checkbox-label,
@@ -605,10 +662,19 @@
 .t007-input-checkbox-box,
 .t007-input-radio-box {
   position: relative;
-  width: 0.85rem;
-  height: 0.85rem;
   border-style: solid;
-  border-width: 1px;
+}
+
+.t007-input-checkbox-box {
+  width: var(--t007-input-checkbox-size);
+  height: var(--t007-input-checkbox-size);
+  border-width: var(--t007-input-checkbox-border-width);
+}
+
+.t007-input-radio-box {
+  width: var(--t007-input-radio-size);
+  height: var(--t007-input-radio-size);
+  border-width: var(--t007-input-radio-border-width);
 }
 
 .t007-input-checkbox-box {
@@ -622,14 +688,15 @@
 }
 
 .t007-input-checkbox-box {
-  border-radius: 0.2rem;
+  border-radius: var(--t007-input-checkbox-border-radius);
 }
 
 .t007-input-radio-box {
   border-radius: 50%;
 }
 
-.t007-input-field:has(.t007-input[type="checkbox"]:checked) .t007-input-checkbox-box {
+.t007-input-field:has(.t007-input[type="checkbox"]:checked)
+  .t007-input-checkbox-box {
   background: var(--t007-input-checkbox-checked-background);
   border-color: var(--t007-input-checkbox-checked-border-color);
 }
@@ -639,9 +706,26 @@
   border-color: var(--t007-input-radio-checked-border-color);
 }
 
-.t007-input-field:has(.t007-input[type="checkbox"], .t007-input[type="radio"]).t007-input-error
-  :is(.t007-input-checkbox-wrapper .t007-input-checkbox-box, .t007-input-radio-wrapper .t007-input-radio-box) {
+.t007-input-field:has(
+    .t007-input[type="checkbox"],
+    .t007-input[type="radio"]
+  ).t007-input-error
+  :is(
+    .t007-input-checkbox-wrapper .t007-input-checkbox-box,
+    .t007-input-radio-wrapper .t007-input-radio-box
+  ) {
   border-color: var(--t007-input-error-color);
+}
+
+.t007-input-field:has(
+    .t007-input[type="checkbox"],
+    .t007-input[type="radio"]
+  ).t007-input-success
+  :is(
+    .t007-input-checkbox-wrapper .t007-input-checkbox-box,
+    .t007-input-radio-wrapper .t007-input-radio-box
+  ) {
+  border-color: var(--t007-input-success-color);
 }
 
 .t007-input-checkbox-tag,
@@ -649,8 +733,9 @@
   content: "";
   opacity: 0;
   position: absolute;
-  margin: auto;
   inset: 0;
+  left: 2.6%;
+  margin: auto;
 }
 
 .t007-input-checkbox-tag {
@@ -658,20 +743,26 @@
   width: 35%;
   height: 70%;
   border: solid var(--t007-input-checkmark-color);
-  border-width: 0 0.125rem 0.125rem 0;
+  border-width: 0 var(--t007-input-checkmark-width)
+    var(--t007-input-checkmark-width) 0;
   transform: rotate(45deg);
 }
 
 .t007-input-radio-tag {
   width: 70%;
-  height: 70%;
+  height: 72.5%;
+  left: -1%;
   border-radius: inherit;
   background: var(--t007-input-radio-color);
+  scale: 0;
+  transition-timing-function: cubic-bezier(0.34, 1.64, 0.64, 1);
 }
 
-.t007-input-field:has(.t007-input[type="checkbox"]:checked) .t007-input-checkbox-tag,
+.t007-input-field:has(.t007-input[type="checkbox"]:checked)
+  .t007-input-checkbox-tag,
 .t007-input-field:has(.t007-input[type="radio"]:checked) .t007-input-radio-tag {
   opacity: 1;
+  scale: 1;
 }
 
 /* Base styles to enable pointer effects */
@@ -697,15 +788,19 @@
   pointer-events: none;
 }
 
-.t007-input-field:is(:hover, :has(.t007-input[type="checkbox"]:focus-visible)) .t007-input-checkbox-box::before,
-.t007-input-field:is(:hover, :has(.t007-input[type="radio"]:focus-visible)) .t007-input-radio-box::before {
+.t007-input-field:is(:hover, :has(.t007-input[type="checkbox"]:focus-visible))
+  .t007-input-checkbox-box::before,
+.t007-input-field:is(:hover, :has(.t007-input[type="radio"]:focus-visible))
+  .t007-input-radio-box::before {
   width: var(--t007-input-ripple-size);
   height: var(--t007-input-ripple-size);
   opacity: 1;
 }
 
-.t007-input-field:has(.t007-input[type="checkbox"]:checked) .t007-input-checkbox-box::before,
-.t007-input-field:has(.t007-input[type="radio"]:checked) .t007-input-radio-box::before {
+.t007-input-field:has(.t007-input[type="checkbox"]:checked)
+  .t007-input-checkbox-box::before,
+.t007-input-field:has(.t007-input[type="radio"]:checked)
+  .t007-input-radio-box::before {
   animation: t007-pulse 350ms ease-out;
 }
 
@@ -714,11 +809,13 @@
     width: 0;
     height: 0;
     opacity: 0.5;
-  } 85% {
+  }
+  85% {
     width: var(--t007-input-ripple-size);
     height: var(--t007-input-ripple-size);
     opacity: 1;
-  } 100% {
+  }
+  100% {
     width: var(--t007-input-ripple-size);
     height: var(--t007-input-ripple-size);
     opacity: 0;
